...
            "state" : "translated",
            "value" : "修改日期"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "删除"
          }
...
            "state" : "translated",
            "value" : "在此输入问题描述"
          }
        }
      }
    },
    "Enter the issue title here" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "在此输入问题标题"
          }
...
            "state" : "translated",
            "value" : "获取报价..."
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "过滤器"
          }
...
            "state" : "translated",
            "value" : "过滤问题，或键入#以添加标签"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "过滤器"
          }
...
            "state" : "translated",
            "value" : "你好，世界！"
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "高"
          }
...
            "state" : "translated",
            "value" : "应用内购买被禁用"
          }
        }
      }
    },
    "Issues" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "问题"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "锁定"
          }
...
            "state" : "translated",
            "value" : "新建问题"
          }
        }
      }
    },
    "New Issue" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新问题"
          }
...
            "state" : "translated",
            "value" : "没什么！"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好的"
          }
...
            "state" : "translated",
            "value" : "恢复购买"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "展示奖项"
          }
...
